# django-docker-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  compose.dev.yml  compose.prod.yml  dev.env  devcontainer.json  docker-compose.dev.yml  docker-compose.prod.yml  init_production_volumes.sh  local.env  local.yml  prod.env  production.env  production.yml  requirements.in  requirements.txt
.github/: dependabot.yml  settings.yml
.github/workflows/: ci.yml  deploy-reusable.yml  dev_deploy.yml  production_deploy.yml  staging_deploy.yml
ansible/: .env.ansible.example
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: provision.yml
ansible/roles/backup/defaults/: main.yml
ansible/roles/backup/tasks/: main.yml
ansible/roles/common/files/: jail.local
ansible/roles/common/tasks/: main.yml
ansible/roles/github_actions/tasks/: main.yml
compose/local/django/: Dockerfile  entrypoint  start
compose/local/django/celery/beat/: start
compose/local/django/celery/worker/: start
compose/production/django/: Dockerfile  entrypoint  start
compose/production/django/celery/beat/: start
compose/production/django/celery/flower/: start
compose/production/django/celery/worker/: start
compose/production/traefik/: Dockerfile  traefik.yml
docker/caddy/: Caddyfile
docker/django/: Dockerfile  entrypoint
docker/mkdocs/: Dockerfile  entrypoint  mkdocs.yml
docs/: .pages  backup.md  code-quality.md  deployment_automated.md  deployment_manual.md  github-actions-setup.md  ssh-key-setup.md
scripts/: backup.sh  deploy.sh  health-check.sh  provision-server.sh
src/: pyproject.toml  requirements.in  requirements.txt
src/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/accounts/tests/: test_views.py
src/config/: asgi.py  settings.py  urls.py
src/config/settings/: base.py  dev.py  prod.py  test.py
src/config/templates/: _header.html  base.html  index.html
src/core/: middleware.py
src/core/templatetags/: core_tags.py
src/project_name/: celery.py  settings.py  urls.py
src/project_name/templates/: index.html
