[tool.poetry]
name = "django-docker-boilerplate"
version = "0.1.0"
description = ""
authors = ["Planeks <planeks@planeks.net>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "==5.1.*"
docutils = "^0.21.2"
celery = "^5.4.0"
celery-redbeat = "^2.2.0"
cffi = "^1.17.1"
django-anymail = "^12.0"
django-extensions = "^3.2.3"
django-bootstrap-datepicker-plus = "^5.0.5"
django-webpack-loader = "^3.1.1"
gunicorn = "^23.0.0"
markdown = "^3.7"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"
pyopenssl = "^24.3.0"
pyparsing = "^3.2.0"
python-decouple = "^3.8"
python-jose = "^3.3.0"
pydot = "^3.0.2"
redis = "^5.2.0"
requests = "^2.32.3"
sentry-sdk = "^2.19.0"
shortuuid = "^1.0.13"
social-auth-app-django = "^5.4.2"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
watchgod = "^0.8.2"
werkzeug = "^3.1.3"
whitenoise = "^6.8.2"
djlint = "^1.36.4"
djade = "^1.7.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2"
freezegun = "^1.4"
markdown-urlize = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-graphviz = "^1.5.3"
mkdocs-material = "^9.5.6"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocstrings-python = "^1.9.0"
griffe = "^0.40.0"
pydot = "^3.0.0"


# Additional development tools
pytest = "^7.4"
ruff = "^0.6.7"
[tool.ruff]
line-length = 120
target-version = "py312"
# Exclude a variety of commonly ignored directories.
exclude = [
  "migrations",
  "asgi.py",
]
[tool.ruff.lint]
extend-select = ["I"]
ignore = [
  "ANN",
  "COM812",
  "ISC001",
  "D",
  "PT009",
  "B904",
  "S101",
  "ARG001",
  "ARG002",
  "G004",
  "EM102",
  "TRY003",
  "TRY401",
  "EM101",
  "S311",
  "S107",
  "S105",
  "N802",
  "TCH001",
  "TCH002",
  "PTH",
  "RUF012",
  "ERA001", # temporary
]
select = ["ALL"]

per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
# Like Black, use double quotes for strings.
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true


